--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,85 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
 }
 
 body {
-  padding: 20px;
-  background-image: url("https://images.unsplash.com/photo-1635776063328-153b13e3c245?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-  background-size: cover;
-  background-repeat: no-repeat;
-  font-family: sans-serif, 'Times New Roman', Times, serif;
+  font-family: sans-serif, "Times New Roman", Times, serif;
+  padding: 15px;
+  justify-content: center;
+  gap: 40px;
+  min-height: 100vh;
+  overflow-y: scroll;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -2;
+}
+
+.background img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 15px;
-  margin-top: 5rem;
-}
-
-.links {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 4rem;
+  text-align: center;
   gap: 15px;
 }
 
-button {
-  padding: 1rem 5rem;
-  width: 300px;
+body,
+header,
+main,
+.background {
+  display: flex;
+  flex-direction: column;
+}
+
+header img {
+  max-width: 160px;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 100%;
+  padding-bottom: 8px;
+}
+
+main {
+  gap: 15px;
+}
+
+.link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 14px;
   border: 1px solid transparent;
   border-radius: 7px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  font-size: 1rem;
+  width: 420px;
+  max-width: 100%;
+  margin: 0 auto;
+  transition-duration: 200ms;
   cursor: pointer;
+  text-decoration: none;
+  color: black;
+  overflow: hidden;
+  font-size: 1em;
+}
+
+.link:hover {
+  border-color: black;
+}
+
+.linkBackground {
+  position: absolute;
+  inset: 0;
+  background-color: whitesmoke;
+  opacity: 0.6;
+  z-index: -1;
 }
